# simple_talk_client

./: .gitignore  Cargo.toml  README.md  app.db  app.db-shm  app.db-wal  config.json  server.log.2025-10-01
public/: index.html  style.css
public/js/: admin.js  audio.js  auth.js  chats.js  friends.js  i18n.js  main.js  ui.js  websocket.js
public/locales/: en.json  zh.json
src/: db.rs  handler.rs  main.rs
