[package]
name = "simple_call_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.75"
magic-crypt = "3.1.13"
rpassword = "7.3"
get_if_addrs = "0.5.3"
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
bcrypt = "0.14"
lazy_static = "1.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
